@startuml epicd-workitem-state
' epicd — State diagram: a Task's lifecycle as PHASES across the authoring & execution pipelines.
' FOUR-AXIS FINAL (2026-07-04): per-task stores ONLY pipeline_id + a bare `phase`.
'   lane  = pipeline_id (field)         phase = THIS diagram (stored, bare name)
'   turn  = actor(phase) in pipeline-data (machine|human|none) — NOT a field
'   claim = Coordinator runtime fact (queued|active|stale)
' There is NO waiting_on field. `needs-human` IS a phase (actor=human).
' status shown to humans = label(role, phase) — display only. Inert engine `state` DELETED.

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam state {
  BorderColor #555555
  BackgroundColor #E8F0FE
  BackgroundColor<<human>> #C8E6C9
  BackgroundColor<<terminal>> #E0E0E0
}

title epicd — Work-item lifecycle (phases; turn = actor(phase); lane = pipeline_id)

[*] --> Draft : Human captures\n(kind:feature / chore / epic)

state "Authoring lane  (pipeline_id = authoring)" as Authoring {
  state "Draft\n(actor=machine)" as Draft
  state "Refining\n(actor=machine)" as Refining
  state "Backlog\n(actor=human · promote gate)" as Backlog <<human>>
  Draft --> Refining : scanner claims (basic-draft / epic-draft)
  Refining --> Backlog : refine done\n(feature→Proposal+Plan / chore→checklist / epic→plan)
  note right of Refining
    Routed by **kind** → RefineStrategy (pure step fn).
    Review cycle N is strategy-internal (Task.refine_log),
    surfaced via Coordinator runtime-fact — NOT a phase.
  end note
}

Backlog --> Ready : **Human promote gate**\n(authoring → execution)

state "Execution lane  (pipeline_id = execution)" as Execution {
  state chooseRole <<choice>>
  state "Ready\n(actor=machine · claim = queued|active)" as Ready
  state "Decomposing\n(actor=machine)" as Decomposing
  state "Awaiting Children\n(actor=none · blocked on children)" as Awaiting
  state "Evaluating\n(actor=machine)" as Evaluating
  Ready --> chooseRole : scanner\n(actor=machine ∧ no live claim)
  chooseRole --> Decomposing : role = compound (Epic)
  Decomposing --> Awaiting : creates children (role stays compound)
  Awaiting --> Evaluating : all children terminal (epic-eval-due)
  note bottom of Ready
    **ready & in-progress are the SAME phase** — claim distinguishes
    queued vs active. Primitive: worker implements → engine.complete()
    → adjudicate DoD (ENG-8); worker may NOT self-write done.
  end note
}

state "Needs Human\n(actor=human)" as NeedsHuman <<human>>
state "Done\n(actor=none)" as Done <<terminal>>

' primitive completion (from the actionable Ready phase, via adjudicate):
chooseRole --> Done : role=primitive · DoD pass
chooseRole --> NeedsHuman : role=primitive · DoD fail
' compound evaluation outcome:
Evaluating --> Done : epic satisfied
Evaluating --> NeedsHuman : epic escalate

NeedsHuman --> Ready : Human gate-review (approve / re-open)
NeedsHuman --> [*] : Human gate-review (reject / archive)
Done --> [*]

note as N_axes
  **FOUR AXES** — only (pipeline_id, phase) are STORED per task:
  lane = pipeline_id (field) · phase = this diagram (bare name) ·
  **turn = actor(phase)** from pipeline-data (NOT a field) · claim = runtime.
  Colour: blue = actor:machine · green = actor:human (your turn) · grey = actor:none.
end note
note as N_claim
  **CLAIM (runtime, Coordinator)** — for actor=machine phases:
  live claim ⇒ 🤖 active · no claim ⇒ ⏳ queued · stale claim ⇒ ⚠️ orphaned.
  actor=human ⇒ 👤 your turn. monitor picks up ONLY actor=machine phases.
end note
note as N_role
  **role** derived from tree (ADR-011 D-1.1): leaf ⇒ primitive (Basic),
  has children ⇒ compound (Epic). Decomposing flips primitive→compound.
  role / turn / status all DERIVED; status = label(role, phase) for display.
end note

@enduml
